2pc - MockReader.py reads toytile xml file

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -967,6 +967,10 @@
       "allowedCategories": [ "internal" ]
     },
     {
+      "name": "sax",
+      "allowedCategories": [ "internal" ]
+    },
+    {
       "name": "semver",
       "allowedCategories": [ "backend", "common", "frontend", "internal", "tools" ]
     },
