--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -107,6 +107,10 @@
       "allowedCategories": [ "frontend", "internal" ]
     },
     {
+      "name": "@bentley/imodel-bridge",
+      "allowedCategories": [ "internal" ]
+    },
+    {
       "name": "@bentley/imodelhub-client",
       "allowedCategories": [ "backend", "common", "frontend", "integration-testing", "internal", "tools" ]
     },
@@ -764,7 +768,7 @@
     },
     {
       "name": "object-hash",
-      "allowedCategories": [ "backend" ]
+      "allowedCategories": [ "backend", "internal" ]
     },
     {
       "name": "oidc-client",
