2PC - reader written in python

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -783,9 +783,9 @@
       "name": "2pc: MockReader.py",
       "type": "python",
       "request": "launch",
-      "program": "${workspaceFolder}/test-apps/2pc/src/test/MockReader.py",
+      "program": "${workspaceFolder}/test-apps/2pc/src/test/assets/MockReader.py",
       "console": "integratedTerminal",
-      "args": ["[::]:50051"],
+      "args": ["[::]:50051", "d:/github/imodeljs/test-apps/2pc/src/test/assets/toytile.json"],
       "env": { "PYTHONPATH": "${workspaceFolder}/test-apps/2pc/lib/generated" }
     },
     {
@@ -799,7 +799,11 @@
       "program": "${workspaceFolder}/test-apps/2pc/node_modules/mocha/bin/_mocha",
       "args": ["--no-timeouts", "lib/test/**/*.test.js"],
       "skipFiles": ["<node_internals>/**/*.js", "node_modules/rxjs/**/*"],
-      "outFiles": ["${workspaceFolder}/test-apps/2pc/lib/**/*.js"]
+      "outFiles": ["${workspaceFolder}/test-apps/2pc/lib/**/*.js"],
+      "env": {
+        "//toytile_inline_typescript_reader": "1",
+        "//toytile_server_address": "[::]:50051"
+      }
     },
     {
       "name": "imodel-from-geojson",
