--- a/core/imodel-bridge/package.json
+++ b/core/imodel-bridge/package.json
@@ -14,18 +14,17 @@
   },
   "scripts": {
     "compile": "npm run build",
-    "build": "npm run build:proto:copy-to-lib && tsc 1>&2 && npm run copy:assets && npm run copy:test-assets && npm run copy:2pc-test-assets",
+    "build": "npm run build:proto:copy-to-lib && tsc 1>&2 && npm run copy:assets && npm run copy:test-assets",
     "//why protoc?": "https://github.com/protobufjs/protobuf.js/issues/1007#issuecomment-378780758",
     "//why grpc_js?": "https://github.com/agreatfool/grpc_tools_node_protoc_ts/issues/59",
-    "build:proto": "grpc_tools_node_protoc --grpc_out=grpc_js:src/2pc/generated --js_out=\"import_style=commonjs,binary:src/2pc/generated\" --ts_out=grpc_js:src/2pc/generated -I ./src/2pc/protobuf ./src/2pc/protobuf/*.proto",
-    "build:proto:copy-to-lib": "rimraf lib\\2pc\\generated && mkdir lib\\2pc\\generated && cpx src/2pc/generated/* lib/2pc/generated",
-    "build:proto:py": "python -m grpc_tools.protoc -I./src/2pc/protobuf --python_out=src/2pc/generated --grpc_python_out=src/2pc/generated src/2pc/protobuf/reader.proto",
+    "build:proto": "grpc_tools_node_protoc --grpc_out=grpc_js:src/generated --js_out=\"import_style=commonjs,binary:src/generated\" --ts_out=grpc_js:src/generated -I ./protobuf ./protobuf/*.proto",
+    "build:proto:copy-to-lib": "rimraf lib\\generated && mkdir lib\\generated && cpx src/generated/* lib/generated",
+    "build:proto:py": "python -m grpc_tools.protoc -I./protobuf --python_out=src/generated --grpc_python_out=src/generated protobuf/reader.proto",
     "clean": "rimraf lib .rush/temp/package-deps*.json",
     "docs": "betools docs --tsIndexFile=./imodel-bridge.ts --json=../../generated-docs/core/imodel-bridge/file.json --onlyJson",
     "copy:assets": "cpx \"./src/assets/**/*\" ./lib/assets",
     "copy:config": "internal-tools copy-config",
     "copy:test-assets": "cpx \"./src/test/assets/**/*\" ./lib/test/assets",
-    "copy:2pc-test-assets": "cpx \"./src/2pc/test/assets/**/*\" ./lib/2pc/test/assets",
     "cover": "nyc npm test",
     "cover:integration": "nyc npm run test:integration",
     "extract-api": "betools extract-api --entry=imodel-bridge",
@@ -34,8 +33,7 @@
     "test": "betools test --offline=\"mock\" --grep=\"#integration|#WebGLPerformance\" --invert",
     "test:all": "npm run pretest && betools test --grep=\"IModelBridgeFwk\"",
     "test:standalone": "npm run pretest && betools test --offline=\"mock\" --grep=\"IModelBridgeFwkStandAlone\"",
-    "test:integration": "npm run pretest && betools test --testDir=\"./lib/test/integration\"",
-    "test:2pc": "mocha --no-timeouts \"./lib/2pc/test/**/*.test.js\""
+    "test:integration": "npm run pretest && betools test --testDir=\"./lib/test/integration\""
   },
   "keywords": [
     "Bentley",
