--- a/core/imodel-bridge/package.json
+++ b/core/imodel-bridge/package.json
@@ -19,7 +19,7 @@
     "//why grpc_js?": "https://github.com/agreatfool/grpc_tools_node_protoc_ts/issues/59",
     "build:proto": "grpc_tools_node_protoc --grpc_out=grpc_js:src/generated --js_out=\"import_style=commonjs,binary:src/generated\" --ts_out=grpc_js:src/generated -I ./protobuf ./protobuf/*.proto",
     "build:proto:copy-to-lib": "rimraf lib\\generated && mkdir lib\\generated && cpx src/generated/* lib/generated",
-    "build:proto:py": "python -m grpc_tools.protoc -I./protobuf --python_out=src/generated --grpc_python_out=src/generated protobuf/reader.proto",
+    "build:proto:py": "python -m grpc_tools.protoc -I./protobuf --python_out=src/generated --grpc_python_out=src/generated protobuf/*.proto",
     "clean": "rimraf lib .rush/temp/package-deps*.json",
     "docs": "betools docs --tsIndexFile=./imodel-bridge.ts --json=../../generated-docs/core/imodel-bridge/file.json --onlyJson",
     "copy:assets": "cpx \"./src/assets/**/*\" ./lib/assets",
