--- a/core/imodel-bridge/package.json
+++ b/core/imodel-bridge/package.json
@@ -30,10 +30,10 @@
     "extract-api": "betools extract-api --entry=imodel-bridge",
     "lint": "eslint -f visualstudio \"./src/**/*.ts\" 1>&2",
     "pretest": "cpx ./src/test/logging.config.json ./lib/test",
-    "test": "betools test --offline=\"mock\" --grep=\"#integration|#WebGLPerformance\" --invert",
+    "test": "betools test --mochaOpts ./.mocharc.json --offline=\"mock\" --grep=\"#integration|#WebGLPerformance\" --invert",
     "test:all": "npm run pretest && betools test --grep=\"IModelBridgeFwk\"",
-    "test:standalone": "npm run pretest && betools test --offline=\"mock\" --grep=\"IModelBridgeFwkStandAlone\"",
-    "test:integration": "npm run pretest && betools test --testDir=\"./lib/test/integration\""
+    "test:standalone": "npm run pretest && betools test --mochaOpts ./.mocharc.json --offline=\"mock\" --grep=\"IModelBridgeFwkStandAlone\"",
+    "test:integration": "npm run pretest && betools test --mochaOpts ./.mocharc.json --testDir=\"./lib/test/integration\""
   },
   "keywords": [
     "Bentley",
