--- a/common/config/azure-pipelines/templates/docs-build.yaml
+++ b/common/config/azure-pipelines/templates/docs-build.yaml
@@ -36,10 +36,13 @@ steps:
     downloadCurrentBuildArtifacts: ${{ parameters.downloadCurrentBuildArtifacts }}
 
 # Currently BeMetalsmith is an internal only tool
-- script: npm install @bentley/bemetalsmith@4.x
+- task: Npm@1
   displayName: Install BeMetalsmith
   workingDirectory: $(Build.ArtifactStagingDirectory)
   inputs:
+    command: custom
+    verbose: false
+    customCommand: 'install @bentley/bemetalsmith@4.x'
     customRegistry: useFeed
     customFeed: 'cddcc498-6606-47b5-b068-e9fa20167bf8'
 
