--- a/common/config/azure-pipelines/templates/docs-build.yaml
+++ b/common/config/azure-pipelines/templates/docs-build.yaml
@@ -38,8 +38,8 @@ steps:
 # Currently BeMetalsmith is an internal only tool
 - task: Npm@1
   displayName: Install BeMetalsmith
-  workingDirectory: $(Build.ArtifactStagingDirectory)
   inputs:
+    workingDir: $(Build.ArtifactStagingDirectory)
     command: custom
     verbose: false
     customCommand: 'install @bentley/bemetalsmith@4.x'
