--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -611,6 +611,10 @@
       "allowedCategories": [ "common" ]
     },
     {
+      "name": "json5",
+      "allowedCategories": [ "backend" ]
+    },
+    {
       "name": "jsonc-parser",
       "allowedCategories": [ "tools" ]
     },
