--- a/core/mobile/package.json
+++ b/core/mobile/package.json
@@ -38,34 +38,35 @@
     "@itwin/core-frontend": "workspace:^3.0.0-dev.90",
     "@bentley/itwin-client": "workspace:^3.0.0-dev.90",
     "@itwin/presentation-common": "workspace:^3.0.0-dev.90",
-    "js-base64": "^3.6.1",
     "ws": "^7.5.3"
   },
   "devDependencies": {
-    "@itwin/core-bentley": "workspace:*",
     "@itwin/build-tools": "workspace:*",
-    "@itwin/eslint-plugin": "workspace:*",
-    "@bentley/itwin-client": "workspace:*",
+    "@itwin/core-bentley": "workspace:*",
     "@itwin/core-backend": "workspace:*",
     "@itwin/core-common": "workspace:*",
     "@itwin/core-frontend": "workspace:*",
+    "@itwin/eslint-plugin": "workspace:*",
+    "@bentley/itwin-client": "workspace:*",
     "@itwin/presentation-common": "workspace:*",
     "@types/chai": "^4.1.4",
-    "@types/fs-extra": "^4.0.7",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.14.31",
-    "@types/ws": "^6.0.4",
+    "@types/ws": "^8.2.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7",
     "cpx": "^1.5.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^7.11.0",
-    "js-base64": "^3.6.1",
     "mocha": "^8.3.2",
     "rimraf": "^3.0.2",
     "typescript": "~4.4.0",
-    "ws": "^7.5.3"
+    "ws": "^8.2.3"
+  },
+  "dependencies": {
+    "js-base64": "^3.6.1"
   },
   "eslintConfig": {
     "plugins": [
