--- a/common/config/azure-pipelines/templates/docs-build.yaml
+++ b/common/config/azure-pipelines/templates/docs-build.yaml
@@ -20,8 +20,8 @@ steps:
   displayName: rush install
   workingDirectory: ${{ parameters.workingDir }}
 
-- script: node common/scripts/install-run-rush.js compile -v
-  displayName: rush compile
+- script: node common/scripts/install-run-rush.js build:ci -v
+  displayName: rush build:ci
   workingDirectory: ${{ parameters.workingDir }}
 
 - script: node common/scripts/install-run-rush.js docs
